# rextrude

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
.semgrep/: rextrude.yml
app/: Cargo.toml  Trunk.toml  index.html
app/assets/models/: printer.evidence.json  printer.glb  printer.machine.toml
app/src/: audio.rs  bgcode.rs  camera.rs  coords.rs  file_picker.rs  firmware.rs  kinematics.rs  layers.rs  loader.rs  main.rs  playback.rs  printer_model.rs  printer_rig.rs  psx.rs  step_decimate.rs  theme.rs  ui.rs  wasm_drop.rs
app/src/panels/: dro.rs  gcode_stream.rs  mod.rs  progress.rs  thermal.rs
assets/firmware/: marlin_ramps14.hex
assets/gcode/: calibration_cube.gcode  hollow_tower.gcode  twisted_star_vase.gcode
crates/gcode-sim/: Cargo.toml
crates/gcode-sim/src/: lib.rs  parser.rs  planner.rs
crates/motion/: Cargo.toml
crates/motion/benches/: layers.rs
crates/motion/src/: geometry.rs  layer.rs  lib.rs
crates/motion/tests/: perf_scaling.rs
crates/rigcheck/: Cargo.toml  README.md
crates/rigcheck/src/: evidence.rs  geom.rs  lib.rs  main.rs  model.rs  report.rs  spec.rs
crates/rigcheck/src/checks/: hygiene.rs  mod.rs  quality.rs  structure.rs  sweep.rs
crates/rigcheck/tests/: checks.rs  printer_glb.rs
emu/: eslint.config.js  package-lock.json  package.json
emu/src/: adc-mega.ts  board-test.ts  board.ts  boot-test.ts  browser-bridge.ts  full-test.ts  ihex.ts  mega2560.ts  pin-table.ts  ramps-pins.ts  run-loop.ts  thermal.ts  uart-host-test.ts  uart-host.ts  vectors.ts
tools/: README.md  gen_audio.py  gen_logo.py  gen_printer_assets.py  gen_textures.py  texture_regions.py
