[package]
name = "rigcheck"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Validates rigged machine GLB models against a sidecar spec"

[[bin]]
name = "rigcheck"
path = "src/main.rs"

[lib]
name = "rigcheck"
path = "src/lib.rs"

[dependencies]
gltf = { version = "1.4", features = ["import"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
